--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "scripts": {
-    "build:style.css": "node_modules/postcss-cli/bin/postcss -u postcss-import -u postcss-cssnext -i css/style.css -o build/webinterface.hax/style.css",
-    "build:script.js": "jspm build js/main.js build/webinterface.hax/script.js",
-    "clean": "mkdir -p build && rm -rd build && mkdir -p build/webinterface.hax",
+    "build:style.css": "node_modules/postcss-cli/bin/postcss -u postcss-import -u postcss-cssnext -i css/style.css -o build/webinterface.shadowPlayer/style.css",
+    "build:script.js": "jspm build js/main.js build/webinterface.shadowPlayer/script.js",
+    "clean": "mkdir -p build && rm -rd build && mkdir -p build/webinterface.shadowPlayer",
     "build:zip": "cd build && zip -r build.zip ./* && file build.zip && cd ..",
-    "build:index.html": "node_modules/.bin/hbsrender -c package.json -t templates/index.html > build/webinterface.hax/index.html",
+    "build:index.html": "node_modules/.bin/hbsrender -c package.json -t templates/index.html > build/webinterface.shadowPlayer/index.html",
     "build": "npm run clean && npm run build:script.js && npm run build:style.css && npm run build:index.html && npm run build:addon.xml && npm run build:readme.md && npm run build:assets && npm run build:zip",
-    "build:assets": "cp -r templates img img.estuary img.hax assets/* build/webinterface.hax/",
-    "build:addon.xml": "node_modules/.bin/hbsrender -c package.json -t templates/addon.xml > build/webinterface.hax/addon.xml",
-    "build:readme.md": "node_modules/.bin/hbsrender -c package.json -t templates/README.md > build/webinterface.hax/README.md"
+    "build:assets": "cp -r templates assets/* build/webinterface.shadowPlayer/",
+    "build:addon.xml": "node_modules/.bin/hbsrender -c package.json -t templates/addon.xml > build/webinterface.shadowPlayer/addon.xml",
+    "build:readme.md": "node_modules/.bin/hbsrender -c package.json -t templates/README.md > build/webinterface.shadowPlayer/README.md"
   },
   "version": "0.0.1",
   "description": "An HTML5 video player that mirrors the video currently playing in Kodi.",
