--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   "jspm": {
     "main": "main.js",
     "devDependencies": {
-      "tty": "npm:jspm-nodelibs-tty@^0.2.0",
       "babel": "npm:babel-core@^5.8.24",
       "net": "npm:jspm-nodelibs-net@^0.2.0",
       "core-js": "npm:core-js@^1.1.4",
@@ -68,7 +67,16 @@
         },
         "jspmNodeConversion": false
       },
-      "npm:debug@2.6.8": {
+      "npm:browserify-zlib@0.1.4": {
+        "dependencies": {
+          "readable-stream": "^2.0.2",
+          "pako": "~0.2.0"
+        },
+        "map": {
+          "_stream_transform": "readable-stream/transform"
+        }
+      },
+      "npm:debug@2.6.9": {
         "main": "src/browser.js",
         "jspmNodeConversion": false,
         "format": "cjs",
@@ -85,10 +93,21 @@
           "util": "@node/util"
         }
       },
+      "npm:font-awesome@4.7.0": {
+        "main": "css/font-awesome.css!",
+        "jspmNodeConversion": false,
+        "registry": "jspm",
+        "dependencies": {
+          "css": "0.1"
+        }
+      },
       "npm:inherits@2.0.3": {
         "ignore": [
           "test.js"
         ]
+      },
+      "npm:jquery@3.2.1": {
+        "format": "amd"
       },
       "npm:lodash@4.17.4": {
         "map": {
@@ -96,10 +115,50 @@
           "process": "@empty"
         }
       },
+      "npm:mocha@3.5.3": {
+        "main": "./mocha.js",
+        "jspmNodeConversion": false,
+        "meta": {
+          "mocha.js": {
+            "deps": [
+              "./mocha.css!"
+            ],
+            "exports": "Mocha",
+            "format": "global"
+          }
+        },
+        "dependencies": {
+          "css": "*",
+          "debug": "^2.2.0",
+          "json3": "npm:json3@3.3.2",
+          "lodash.create": "npm:lodash.create@3.1.1"
+        },
+        "registry": "jspm",
+        "map": {
+          "./mocha.js": {
+            "node": "./lib/mocha.js"
+          },
+          "escape-string-regexp": "@empty",
+          "growl": "@empty",
+          "./lib/reporters.js": "./lib/reporters/index.js",
+          "./lib/interfaces.js": "./lib/interfaces/index.js",
+          "./lib/to-iso-string.js": "./lib/to-iso-string/index.js",
+          "glob": "@empty",
+          "mkdirp": "@empty",
+          "jade": "@empty",
+          "diff": "@empty",
+          "supports-color": "@empty",
+          "path": "@node/path",
+          "fs": "@node/fs",
+          "util": "@node/util",
+          "events": "@node/events",
+          "tty": "@node/tty"
+        }
+      },
       "npm:moment@2.18.1": {
         "jspmNodeConversion": false
       },
-      "npm:pbkdf2@3.0.13": {
+      "npm:pbkdf2@3.0.14": {
         "main": "browser.js"
       },
       "npm:safe-buffer@5.1.1": {
@@ -107,10 +166,13 @@
       }
     },
     "peerDependencies": {
+      "https": "npm:jspm-nodelibs-https@^0.2.0",
+      "querystring": "npm:jspm-nodelibs-querystring@^0.2.0",
       "string_decoder": "npm:jspm-nodelibs-string_decoder@^0.2.0",
       "os": "npm:jspm-nodelibs-os@^0.2.0",
       "stream": "npm:jspm-nodelibs-stream@^0.2.0",
       "events": "npm:jspm-nodelibs-events@^0.2.0",
+      "tty": "npm:jspm-nodelibs-tty@^0.2.0",
       "util": "npm:jspm-nodelibs-util@^0.2.0",
       "http": "npm:jspm-nodelibs-http@^0.2.0",
       "process": "npm:jspm-nodelibs-process@^0.2.0",
@@ -123,7 +185,8 @@
       "module": "npm:jspm-nodelibs-module@^0.2.0",
       "fs": "npm:jspm-nodelibs-fs@^0.2.0",
       "crypto": "npm:jspm-nodelibs-crypto@^0.2.0",
-      "assert": "npm:jspm-nodelibs-assert@^0.2.0"
+      "assert": "npm:jspm-nodelibs-assert@^0.2.0",
+      "zlib": "npm:jspm-nodelibs-zlib@^0.2.0"
     },
     "dependencies": {
       "babel-plugin-transform-es2015-arrow-functions": "npm:babel-plugin-transform-es2015-arrow-functions@^6.8.0",
@@ -132,6 +195,7 @@
       "babel-polyfill": "npm:babel-polyfill@^6.9.1",
       "json": "github:systemjs/plugin-json@^0.1.2",
       "handlebars": "github:components/handlebars.js@^4.0.5",
+      "vue.js": "npm:vue.js@^0.3.2",
       "whatwg-fetch": "npm:whatwg-fetch@^1.0.0",
       "babel-preset-es2015": "npm:babel-preset-es2015@^6.9.0"
     }
@@ -142,7 +206,6 @@
     "handlebars": "^4.0.5",
     "handlebars-cmd": "^0.1.4",
     "hbsrender": "^1.0.9",
-    "jspm": "^0.17.0-beta.32",
     "lodash": "^4.17.4",
     "plugin-typescript": "^5.3.1",
     "postcss-cli": "^2.5.2",
@@ -151,6 +214,6 @@
   },
   "private": true,
   "devDependencies": {
-    "jspm": "^0.17.0-beta.44"
+    "jspm": "^0.17.0-beta.45"
   }
 }
