--- a/package.json
+++ b/package.json
@@ -46,6 +46,59 @@
       "minify": false
     },
     "overrides": {
+      "npm:esprima@2.7.3": {
+        "jspmNodeConversion": false
+      },
+      "npm:svgo@0.7.2": {
+        "meta": {
+          "lib/svgo/config.js": {
+            "deps": [
+              "../../plugins/removeDoctype",
+              "../../plugins/removeXMLProcInst",
+              "../../plugins/removeComments",
+              "../../plugins/removeMetadata",
+              "../../plugins/removeEditorsNSData",
+              "../../plugins/cleanupAttrs",
+              "../../plugins/minifyStyles",
+              "../../plugins/convertStyleToAttrs",
+              "../../plugins/cleanupIDs",
+              "../../plugins/removeRasterImages",
+              "../../plugins/removeUselessDefs",
+              "../../plugins/cleanupNumericValues",
+              "../../plugins/cleanupListOfValues",
+              "../../plugins/convertColors",
+              "../../plugins/removeUnknownsAndDefaults",
+              "../../plugins/removeNonInheritableGroupAttrs",
+              "../../plugins/removeUselessStrokeAndFill",
+              "../../plugins/removeViewBox",
+              "../../plugins/cleanupEnableBackground",
+              "../../plugins/removeHiddenElems",
+              "../../plugins/removeEmptyText",
+              "../../plugins/convertShapeToPath",
+              "../../plugins/moveElemsAttrsToGroup",
+              "../../plugins/moveGroupAttrsToElems",
+              "../../plugins/collapseGroups",
+              "../../plugins/convertPathData",
+              "../../plugins/convertTransform",
+              "../../plugins/removeEmptyAttrs",
+              "../../plugins/removeEmptyContainers",
+              "../../plugins/mergePaths",
+              "../../plugins/removeUnusedNS",
+              "../../plugins/transformsWithOnePath",
+              "../../plugins/sortAttrs",
+              "../../plugins/removeTitle",
+              "../../plugins/removeDesc",
+              "../../plugins/removeDimensions",
+              "../../plugins/removeAttrs",
+              "../../plugins/addClassesToSVGElement",
+              "../../plugins/removeStyleElement",
+              "../../plugins/removeXMLNS",
+              "../../plugins/removeElementsByAttr",
+              "../../plugins/addAttributesToSVGElement"
+            ]
+          }
+        }
+      },
       "npm:babel-runtime@5.8.38": {
         "optionalDependencies": {
           "core-js": "^1.2.0"
@@ -163,10 +216,14 @@
       },
       "npm:safe-buffer@5.1.1": {
         "browser": "index.js"
+      },
+      "npm:vue@2.4.4": {
+        "main": "./dist/vue.common.js"
       }
     },
     "peerDependencies": {
       "https": "npm:jspm-nodelibs-https@^0.2.0",
+      "punycode": "npm:jspm-nodelibs-punycode@^0.2.0",
       "querystring": "npm:jspm-nodelibs-querystring@^0.2.0",
       "string_decoder": "npm:jspm-nodelibs-string_decoder@^0.2.0",
       "os": "npm:jspm-nodelibs-os@^0.2.0",
@@ -195,6 +252,8 @@
       "babel-polyfill": "npm:babel-polyfill@^6.9.1",
       "json": "github:systemjs/plugin-json@^0.1.2",
       "handlebars": "github:components/handlebars.js@^4.0.5",
+      "systemjs-plugin-vue": "npm:systemjs-plugin-vue@^1.2.0",
+      "vue": "npm:vue@^2.4.4",
       "vue.js": "npm:vue.js@^0.3.2",
       "whatwg-fetch": "npm:whatwg-fetch@^1.0.0",
       "babel-preset-es2015": "npm:babel-preset-es2015@^6.9.0"
